--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<div id="wrapper">
+		<input type="text" placeholder='Enter digits to sort. Separate them by coma'>
 		<div id="forArray">
 			
 		</div>
